src/test/ui/generic-associated-types/issue-91139.stderr
error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:12
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:12
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:12
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:12
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:58
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |                                                          ^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:58
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |                                                          ^^^^^^^^^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/issue-91139.rs:14:58
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |                                                          ^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn foo<T: 'static>() {
   |         +++++++++

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:58
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |                                                          ^^^^^^^^^

error: `T` does not live long enough
  --> $DIR/issue-91139.rs:14:58
   |
LL |     let _: for<'a> fn(<() as Foo<T>>::Type<'a>, &'a T) = |_, _| ();
   |                                                          ^^^^^^^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0310`.
